@@ -24,69 +24,64 @@ public class GherkinScenarioGenerator {
 
     // Modal verbs that should be filtered out
     private static final Set<String> MODAL_VERBS = Set.of(
-        "should", "may", "might", "could", "would", "ideally", "possibly", "perhaps"
-    );
-    
+            "should", "may", "might", "could", "would", "ideally", "possibly", "perhaps");
+
     // Narrative phrases that should be filtered out (prose indicators)
     private static final Set<String> NARRATIVE_PHRASES = Set.of(
-        "in order to", "as mentioned", "note that", "for example", "it should be noted",
-        "please note", "keep in mind", "bear in mind", "it is important to"
-    );
-    
+            "in order to", "as mentioned", "note that", "for example", "it should be noted",
+            "please note", "keep in mind", "bear in mind", "it is important to");
+
     // Patterns for extracting Gherkin components
     private static final Pattern GIVEN_PATTERN = Pattern.compile(
-        "(?:given|assuming|provided that)\\s+(.+?)(?:,|\\.|$)",
-        Pattern.CASE_INSENSITIVE
-    );
-    
+            "(?:given|assuming|provided that)\\s+(.+?)(?:,|\\.|$)",
+            Pattern.CASE_INSENSITIVE);
+
     private static final Pattern WHEN_PATTERN = Pattern.compile(
-        "(?:when|if|upon|on|after)\\s+(.+?)(?:,|\\.|$)",
-        Pattern.CASE_INSENSITIVE
-    );
-    
+            "(?:when|if|upon|on|after)\\s+(.+?)(?:,|\\.|$)",
+            Pattern.CASE_INSENSITIVE);
+
     private static final Pattern THEN_PATTERN = Pattern.compile(
-        "(?:then|the system|it)\\s+(.+?)(?:,|\\.|$)",
-        Pattern.CASE_INSENSITIVE
-    );
+            "(?:then|the system|it)\\s+(.+?)(?:,|\\.|$)",
+            Pattern.CASE_INSENSITIVE);
 
     /**
      * Generates a Gherkin scenario from a requirement.
      * 
      * @param requirement The requirement to convert
      * @return A GherkinScenario with Given/When/Then structure
-     * Requirements: 5.1, 5.2, 5.3, 5.4, 5.5, 5.6
+     *         Requirements: 5.1, 5.2, 5.3, 5.4, 5.5, 5.6
      */
     public GherkinScenario generateScenario(Requirement requirement) {
         if (requirement == null) {
             throw new IllegalArgumentException("Requirement cannot be null");
         }
-        
+
         String text = requirement.getText();
         String scenarioName = generateScenarioName(text);
-        
+
         // Extract Given/When/Then components
         List<String> givenClauses = extractGivenClauses(text);
         List<String> whenClauses = extractWhenClauses(text);
         List<String> thenClauses = extractThenClauses(text);
-        
+
         // Filter narrative phrases from all clauses
         givenClauses = filterNarrativePhrases(givenClauses);
         whenClauses = filterNarrativePhrases(whenClauses);
         thenClauses = filterNarrativePhrases(thenClauses);
-        
+
         // Filter modal verbs from all clauses
         givenClauses = filterModalVerbs(givenClauses);
         whenClauses = filterModalVerbs(whenClauses);
         thenClauses = filterModalVerbs(thenClauses);
-        
+
         // Ensure verifiable Then clauses
         thenClauses = ensureVerifiableThenClauses(thenClauses);
-        
+
         // Split compound conditions
         givenClauses = splitCompoundConditions(givenClauses);
         whenClauses = splitCompoundConditions(whenClauses);
         thenClauses = splitCompoundConditions(thenClauses);
-        
+
         return new GherkinScenario(scenarioName, givenClauses, whenClauses, thenClauses);
     }
 
@@ -95,16 +90,16 @@ public class GherkinScenarioGenerator {
      * 
      * @param requirements The requirements to convert
      * @return List of GherkinScenarios
-     * Requirements: 5.1, 5.2, 5.3, 5.4, 5.5, 5.6
+     *         Requirements: 5.1, 5.2, 5.3, 5.4, 5.5, 5.6
      */
     public List<GherkinScenario> generateScenarios(List<Requirement> requirements) {
         if (requirements == null) {
             throw new IllegalArgumentException("Requirements list cannot be null");
         }
-        
+
         return requirements.stream()
                 .map(this::generateScenario)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -116,28 +111,28 @@ public class GherkinScenarioGenerator {
     private String generateScenarioName(String text) {
         // Remove narrative phrases first
         text = removeNarrativePhrases(text);
-        
+
         // Remove common prefixes
         text = text.replaceFirst("(?i)^(the system shall|the system must|system shall|system must)\\s+", "");
         text = text.replaceFirst("(?i)^(when|if|given|while)\\s+", "");
-        
+
         // Take first clause or sentence
         String[] parts = text.split("[,.]");
         String name = parts[0].trim();
-        
+
         // Filter modal verbs from scenario name
         name = removeModalVerbs(name);
-        
+
         // Capitalize first letter
         if (!name.isEmpty()) {
             name = Character.toUpperCase(name.charAt(0)) + name.substring(1);
         }
-        
+
         // Limit length
         if (name.length() > 80) {
             name = name.substring(0, 77) + "...";
         }
-        
+
         return name;
     }
 
@@ -149,7 +144,7 @@ public class GherkinScenarioGenerator {
      */
     private List<String> extractGivenClauses(String text) {
         List<String> clauses = new ArrayList<>();
-        
+
         Matcher matcher = GIVEN_PATTERN.matcher(text);
         while (matcher.find()) {
             String clause = matcher.group(1).trim();
@@ -157,7 +152,7 @@ public class GherkinScenarioGenerator {
                 clauses.add(normalizeClause(clause));
             }
         }
-        
+
         // If no explicit Given found, check for state-related patterns
         if (clauses.isEmpty()) {
             if (text.toLowerCase().matches(".*\\b(authenticated|logged in|authorized|active)\\b.*")) {
@@ -171,7 +166,7 @@ public class GherkinScenarioGenerator {
                 }
             }
         }
-        
+
         return clauses;
     }
 
@@ -183,7 +178,7 @@ public class GherkinScenarioGenerator {
      */
     private List<String> extractWhenClauses(String text) {
         List<String> clauses = new ArrayList<>();
-        
+
         Matcher matcher = WHEN_PATTERN.matcher(text);
         while (matcher.find()) {
             String clause = matcher.group(1).trim();
@@ -191,7 +186,7 @@ public class GherkinScenarioGenerator {
                 clauses.add(normalizeClause(clause));
             }
         }
-        
+
         // If no explicit When found, try to extract action
         if (clauses.isEmpty()) {
             // Look for action verbs
@@ -204,7 +199,7 @@ public class GherkinScenarioGenerator {
                 }
             }
         }
-        
+
         return clauses;
     }
 
@@ -216,7 +211,7 @@ public class GherkinScenarioGenerator {
      */
     private List<String> extractThenClauses(String text) {
         List<String> clauses = new ArrayList<>();
-        
+
         Matcher matcher = THEN_PATTERN.matcher(text);
         while (matcher.find()) {
             String clause = matcher.group(1).trim();
@@ -224,7 +219,7 @@ public class GherkinScenarioGenerator {
                 clauses.add(normalizeClause(clause));
             }
         }
-        
+
         // If no explicit Then found, use the main requirement as outcome
         if (clauses.isEmpty()) {
             String outcome = extractOutcome(text);
@@ -232,7 +227,7 @@ public class GherkinScenarioGenerator {
                 clauses.add(outcome);
             }
         }
-        
+
         return clauses;
     }
 
@@ -243,7 +238,7 @@ public class GherkinScenarioGenerator {
         // Remove common prefixes
         text = text.replaceFirst("(?i)^(the system shall|the system must|system shall|system must)\\s+", "");
         text = text.replaceFirst("(?i)^(when|if|given|while)\\s+", "");
-        
+
         // Take first clause
         String[] parts = text.split("[,.]");
         return parts.length > 0 ? normalizeClause(parts[0]) : "";
@@ -256,7 +251,7 @@ public class GherkinScenarioGenerator {
         // Remove prefixes and get the main action/outcome
         text = text.replaceFirst("(?i)^(the system shall|the system must|system shall|system must)\\s+", "");
         text = text.replaceFirst("(?i)^(when|if|given|while)\\s+.+?,\\s*", "");
-        
+
         String[] parts = text.split("[,.]");
         return parts.length > 0 ? normalizeClause(parts[0]) : text;
     }
@@ -267,15 +262,15 @@ public class GherkinScenarioGenerator {
     private String normalizeClause(String clause) {
         clause = clause.trim();
         clause = clause.replaceAll("\\s+", " ");
-        
+
         // Ensure lowercase start (will be prefixed with Given/When/Then)
         if (!clause.isEmpty()) {
             clause = Character.toLowerCase(clause.charAt(0)) + clause.substring(1);
         }
-        
+
         // Remove trailing punctuation
         clause = clause.replaceAll("[,;:]$", "");
-        
+
         return clause;
     }
 
@@ -288,12 +283,13 @@ public class GherkinScenarioGenerator {
     private List<String> filterModalVerbs(List<String> clauses) {
         return clauses.stream()
                 .map(this::removeModalVerbs)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * Filters narrative phrases from clauses.
-     * Narrative phrases are prose indicators that should not appear in structured Gherkin.
+     * Narrative phrases are prose indicators that should not appear in structured
+     * Gherkin.
      * 
      * Requirements: 5.5
      */
@@ -301,7 +297,7 @@ public class GherkinScenarioGenerator {
         return clauses.stream()
                 .map(this::removeNarrativePhrases)
                 .filter(clause -> !clause.trim().isEmpty()) // Remove empty clauses after filtering
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -339,7 +335,7 @@ public class GherkinScenarioGenerator {
     private List<String> ensureVerifiableThenClauses(List<String> thenClauses) {
         return thenClauses.stream()
                 .map(this::makeVerifiable)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -348,18 +344,18 @@ public class GherkinScenarioGenerator {
     private String makeVerifiable(String clause) {
         // If clause is vague, try to make it more concrete
         String lower = clause.toLowerCase();
-        
+
         // Replace vague terms with concrete ones
         if (lower.contains("successfully")) {
             // Already somewhat concrete
             return clause;
         }
-        
+
         if (lower.contains("correctly") || lower.contains("properly")) {
             // These are vague - but keep them for now as they may be refined later
             return clause;
         }
-        
+
         // Ensure clause describes a state or action result
         if (!lower.matches(".*(is|are|has|have|displays|shows|returns|creates|updates|deletes|sends|receives).*")) {
             // Add a concrete verb if missing
@@ -367,7 +363,7 @@ public class GherkinScenarioGenerator {
                 clause = "the system " + clause;
             }
         }
-        
+
         return clause;
     }
 
@@ -379,7 +375,7 @@ public class GherkinScenarioGenerator {
      */
     private List<String> splitCompoundConditions(List<String> clauses) {
         List<String> split = new ArrayList<>();
-        
+
         for (String clause : clauses) {
             // Split on "and" but not "and then"
             if (clause.toLowerCase().contains(" and ") && !clause.toLowerCase().contains(" and then")) {
@@ -394,7 +390,7 @@ public class GherkinScenarioGenerator {
                 split.add(clause);
             }
         }
-        
+
         return split;
     }
 
@@ -408,12 +404,12 @@ public class GherkinScenarioGenerator {
         if (scenario == null) {
             throw new IllegalArgumentException("Scenario cannot be null");
         }
-        
+
         StringBuilder sb = new StringBuilder();
-        
+
         // Scenario name
         sb.append("Scenario: ").append(scenario.getScenario()).append("\n");
-        
+
         // Given clauses
         List<String> givenClauses = scenario.getGiven();
         if (!givenClauses.isEmpty()) {
@@ -422,7 +418,7 @@ public class GherkinScenarioGenerator {
                 sb.append("  And ").append(givenClauses.get(i)).append("\n");
             }
         }
-        
+
         // When clauses
         List<String> whenClauses = scenario.getWhen();
         if (!whenClauses.isEmpty()) {
@@ -431,7 +427,7 @@ public class GherkinScenarioGenerator {
                 sb.append("  And ").append(whenClauses.get(i)).append("\n");
             }
         }
-        
+
         // Then clauses
         List<String> thenClauses = scenario.getThen();
         if (!thenClauses.isEmpty()) {
@@ -440,7 +436,7 @@ public class GherkinScenarioGenerator {
                 sb.append("  And ").append(thenClauses.get(i)).append("\n");
             }
         }
-        
+
         return sb.toString();
     }
 }
